# vibe

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  justfile  setup-prompt.md
.github/workflows/: test.yml
src/: app.rs  main.rs  task_prompt.rs  terminal.rs
src/input/: actions.rs  keybindings.rs
src/state/: app_state.rs  logs.rs  sessions.rs  tasks.rs  worktrees.rs
src/storage/: tasks.rs
src/ui/: common.rs  kanban.rs  logs.rs  mod.rs  search.rs  sessions.rs  task_detail.rs  worktrees.rs
